fix css user select on safari

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -127,6 +127,9 @@ body {
   #REUSED STYLE
 \*-----------------------------------*/
 .no__select {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
 
@@ -262,6 +265,9 @@ article.active {
   box-shadow: var(--shadow-2);
   cursor: pointer;
   z-index: 1;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
 
